code smells fix